--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
 version: 2
+orbs:
+  browser-tools: circleci/browser-tools@1.1.0
 jobs:
   build:
     docker:
@@ -6,7 +8,12 @@ jobs:
         environment:
           CHROME_BIN: "/usr/bin/google-chrome"
     steps:
+      - browser-tools/install-browser-tools
       - checkout
       - run: npm install --global npm@latest
       - run: npm install
+      - run: |
+          node --version
+          java --version
+          google-chrome --version
       - run: npm test
