--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ orbs:
   browser-tools: circleci/browser-tools@1.1.0
 
 jobs:
-  test:
+  build:
     docker:
       - image: cimg/node:12.19-browsers
     steps:
