--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,13 +10,20 @@ jobs:
         environment:
            CHROME_BIN: "/usr/bin/google-chrome"
     steps:
-      - browser-tools/install-browser-tools
+      - browser-tools/install-chrome
+      - browser-tools/install-chromedriver
       - checkout
       - run: npm install --global npm@latest
       - run: npm install
       - run:
           command: |
             google-chrome --version
+            chromedriver --version
+          name: Check install
+      - run: npm test
+
+
+
 # version: 2
 # # orbs:
 # #   browser-tools: circleci/browser-tools@1.1.0
