--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  browser-tools: circleci/browser-tools@1.1.0
+  browser-tools: circleci/browser-tools@1.4.4
 
 jobs:
   build:
@@ -9,8 +9,8 @@ jobs:
       - image: cimg/node:20.7-browsers
     steps:
       - browser-tools/install-chrome:
-        chrome-version: 85.0.4183.102
-      - browser-tools/install-chromedriver
+          chrome-version: 116.0.5845.96 # TODO: remove until: https://github.com/CircleCI-Public/browser-tools-orb/issues/75
+          replace-existing: true # TODO: remove until: https://github.com/CircleCI-Public/browser-tools-orb/issues/75
       - checkout
       - run: npm install --global npm@latest
       - run: npm install
